applications/mlflow/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow-route
  namespace: mlflow
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-gateway
  hostnames:
    - mlflow.yeebs.dev
  rules:
    - backendRefs:
        - name: mlflow-server
          port: 80
